# VENOM-Omega-Lambda

./: .gitattributes  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  VERIFICATION_COMPLETE.md  VERIFICATION_REPORT.txt  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  requirements.txt  settings.gradle.kts  setup.py
.github/workflows/: android.yml  python.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  bridge_jni.cpp
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  INTEGRATION_GUIDE.md  LAMBDA_ARCHITECTURE.md  MATHEMATICS.md  OMEGA_ARCHITECTURE.md  PHILOSOPHY.md
examples/: kotlin_example.kt  mesh_example.py  python_example.py
lambda/core/: venom_api.py
lambda/organs/: optimize_core.py  regen_core.py
lambda/pulse/: __init__.py
lambda/systemd/: venom-api.service  venom-fractal.service  venom-mesh-discovery.service  venom-mesh-orchestrator.service
lambda/tests/: test_fractal.py  test_lambda_arbiter.py  test_mesh.py
models/: README.md
scripts/: deploy_mesh.sh  generate_proto.sh  install_android.sh  install_linux.sh
venom_lambda/: __init__.py
venom_lambda/arbiter_core/: __init__.py  arbiter.py  genome.json
venom_lambda/core/: __init__.py  fractal.py  mesh_discovery.py  venom-mesh-orchestrator.py  venom.proto  venom_api.py  venom_mesh_orchestrator.py
venom_lambda/integration/: integration_manager.py
venom_lambda/mesh/: __init__.py  mesh.py  nanobot.py
venom_lambda/organs/: __init__.py  balance_core.py  entropy_core.py  optimize_core.py  (+1 more)
venv311/: pyvenv.cfg
(+11007 files in other folders)
